--- a/index.html
+++ b/index.html
@@ -136,9 +136,8 @@
                                                            function (error) {
                                                                console.log("download error source " + error.source);
                                                                console.log("download error target " + error.target);
-                                                               console.log("upload error code: " + error.code);
-                                                           }
-                                                           );
+                                                               console.log("download error code: " + error.code);
+                                                           }, true);
                                              },
                                              fail);
                              },
