--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <script src="app/js/app.js"></script>
     <script src="app/js/routes.js"></script>
     <script src="app/js/resources.js"></script>
-    <script>
+    <!--<script>
         document.addEventListener("deviceready", function() {
             alert("READY!");
             $("#btn").click(function () {
@@ -180,6 +180,6 @@
                 //});
             });
         }, false);
-    </script>
+    </script>-->
 </body>
 </html>
