--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 <body class="rtl swipe-animations-enabled" ng-controller="AppCtrl">
     <div class="content-container">
         <img src="https://s3.amazonaws.com/build.phonegap.com/45618926-687f-11e3-ad62-22000a98b3d6/icon.png" />
+        <div style="border: solid 4px yellow">
+            <img id="img" src="" />    
+        </div>
+        
         <button id="btn">DOWNLOAD</button>
         <app-header></app-header>
 
@@ -120,7 +124,7 @@
 
             function onFileDownloaded(i) {
                 console.log("I", i);
-
+                $("#img").attr("src", i.toURL());
                 alert("FILE DOWNLOADED!!!");
             }
 
