--- a/app/js/directives/product-pane/product-pane.html
+++ b/app/js/directives/product-pane/product-pane.html
@@ -10,6 +10,7 @@
 
         <img class="productImg" ng-class="{'compared': isCompared}" ng-src="{{ product.imageUrl }}" />
         <div style="border:solid 4px yellow">
+            <h1>{{product.localImageUrl}}</h1>
             <img class="productImg" ng-class="{'compared': isCompared}" ng-src="{{ product.localImageUrl }}" />
         </div>
         <div class="icons" ng-show="!isCompared">
