--- a/app/js/directives/product-pane/product-pane.html
+++ b/app/js/directives/product-pane/product-pane.html
@@ -8,11 +8,7 @@
         <div class="check-box" ng-show="selectionMode" ng-click="check($event)" ng-class="{'checked': checked }"></div>
 
 
-        <img class="productImg" ng-class="{'compared': isCompared}" ng-src="{{ product.imageUrl }}" />
-        <div style="border:solid 4px yellow">
-            <input value="{{product.localImageUrl}}" />
-            <img class="localImage" ng-class="{'compared': isCompared}" ng-src="{{ product.localImageUrl }}" />
-        </div>
+        <img class="productImg" ng-class="{'compared': isCompared}" ng-src="{{ product.imageUrl }}" s-local-cache />
         <div class="icons" ng-show="!isCompared">
             <div class="iconImg" ng-repeat="icon in product.icons">
                 <!--<img ng-src=" product.icons " />-->
