--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="base-url" content="http://dev.wallashops.co.il" />
     <meta name="ws-url" content="http://www.wallashops.co.il">
     <meta name="auto-close-at-level" content="0">
-    <meta name="version" content="1.1.12"/>
+    <meta name="version" content="1.1.13"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/rtl/css/bootstrap.rtl.css" />
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -71,6 +71,7 @@
     <script src="lib/simple/filters/entity-description.js"></script>
     <!-- Directives -->
     <script src="lib/simple/directives/simple-nav.js"></script>
+    <script src="lib/simple/directives/local-cache.js"></script>
 
     <script src="lib/simple/simple-module.js"></script>
 
