--- a/app/js/directives/product-pane/product-pane.html
+++ b/app/js/directives/product-pane/product-pane.html
@@ -23,23 +23,33 @@
 
 
 
-        <div class="rating" ng-show="isRating(product)==='rating'" ng-class="{'compared': isCompared}">
+        <div class="rating" ng-show="setRatingLine(product)==='rating'" ng-class="{'compared': isCompared}">
             <div class="raters-number" ng-show="!isCompared">({{product.ratersNumber}})</div>
             <div class="stars" ng-class="{'compared': isCompared}">
                 <i class="fa" ng-repeat="star in stars" ng-class="{'fa-star': $index<product.rating, 'fa-star-o':$index>=product.rating, 'fa-star-half-o' : $index==asInt(product.rating) && isDecimal(product.rating) }"></i>
             </div>
         </div>
 
-        <p ng-show="!isCompared && isRating(product)==='payments'">מספר תשלומים: {{ product.paymentsNum}} <span class="payments" ng-show="product.paymentsNum <= 36">(עד 36 תשלומים</span><span class="payments" ng-show="product.paymentsNum === 36"> ללא ריבית</span>)</p>
-        <p ng-show="!isCompared && isRating(product)==='soldCount'">נרכשו: {{ product.buyersCount}}</p>
+        <p ng-show="!isCompared && setRatingLine(product)==='payments'">מספר תשלומים: {{ product.paymentsNum}} <span class="payments" ng-show="product.paymentsNum < 36">(עד 36 תשלומים כולל ריבית)</span></p>
+        <p ng-show="!isCompared && setRatingLine(product)==='soldCount'">נרכשו: {{ product.buyersCount}}</p>
 
-        <p class="price" ng-class="{'compared': isCompared}"><span ng-show="isShippingIncluded(product) == 'discount'">רק </span><b>{{product.price}} ש"ח</b></p>
+        <div class="price" ng-class="{'compared': isCompared}" ng-show="product.saleType !== 'Personal'">
+            <span>רק </span>
+            <b> {{product.price}} ש"ח</b>
 
-        <div class="diagonal" ng-show="isShippingIncluding(product) == 'discount'"></div>
+        </div>
+        <div class="price" ng-class="{'compared': isCompared}" ng-show="product.saleType === 'Personal' && product.showAvgPrice">
+            <b> {{product.price}} ש"ח</b>
+            <div class="diagonal"></div>
+        </div>
 
-        <span class="details-text" ng-show="isShippingIncluded(product) == 'discount'">במקום {{product.originalPrice}} ש"ח</span>
-        <span class="details-text" ng-show="isShippingIncluded(product) == 'details'">לפרטים</span>
-        <span class="details-text" ng-show="isShippingIncluded(product) == 'shipping' ">כולל משלוח</span>
+        {{product.saleType}} {{product.ratersNumber}} {{product.hideDiscount}} 
+        
+        <span class="details-text" ng-show="setDetailsLine(product) == 'discount'"><div class="diagonal" ng-show="setDetailsLine(product) == 'discount'"></div>במקום {{product.originalPrice}} ש"ח</span>
+        <span class="details-text" ng-show="setDetailsLine(product) == 'details'">לפרטים</span>
+        <span class="details-text" ng-show="setDetailsLine(product) == 'shipping'">כולל משלוח</span>
+        <span class="details-text" ng-show="setDetailsLine(product) == 'personalPrice'">מחיר אישי</span>
+        <span class="details-text" ng-show="setDetailsLine(product) == 'getPrice'">קבל מחיר</span>
         <p class="details" ng-show="!isCompared"></p>
 
 
