--- a/app/js/directives/products-list-items/products-list-items.html
+++ b/app/js/directives/products-list-items/products-list-items.html
@@ -1,7 +1,5 @@
 ﻿<div class="products-list clear">
     <div class="product" ng-repeat="product in products" ng-click="showProduct({product:product})">
-        
-        <product-pane product="product" is-compared="false" selection-mode="selectionMode" selected-items="selectedItems" max-selection="maxSelection" is-checked-to-compare="isCheckedToCompare({product:product})"></product-pane>
+        <product-pane product="product" is-compared="false" selected-items="selectedItems" is-search-page="isSearchPage" max-selection="maxSelection" is-checked-to-compare="isCheckedToCompare({product:product})"></product-pane>
     </div>
-
 </div>
