user icon image

--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -29,7 +29,7 @@
 
     <div class="user" ng-click="openUserCard()">
         <div class="left-buffer"></div>
-        <i class="fa fa-user"></i>
+        <div class="user-image"></div>
     </div>
 
 
