--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -1,7 +1,8 @@
 ﻿<header>
     
     <div class="header-right-side">
-        <div class="logo">
+        [{{isCategories}}]
+        <div class="logo" style="display:none">
             <a href="#">
                 <img src="app/img/logo.png">
             </a>
