--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -1,8 +1,7 @@
 ﻿<header>
     
     <div class="header-right-side">
-        [{{isCategories}}]
-        <div class="logo" style="display:none">
+        <div class="logo">
             <a href="#">
                 <img src="app/img/logo.png">
             </a>
