--- a/app/js/directives/products-list/products-list.html
+++ b/app/js/directives/products-list/products-list.html
@@ -1,6 +1,6 @@
 ﻿<div ng-show="category.products.length"
-     ng-swipe-right="navigateNext()"
-     ng-swipe-left="navigateBack()"
+     n-g-swipe-right="navigateNext()"
+     n-g-swipe-left="navigateBack()"
      ng-class="{ 'next-animation' : movedToNext, 'previous-animation' : movedToPrevious}">
     <h4 class=" products-list-name">
     {{category.name}}</h4>
