--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Walla! שופס</title>
     <!--<meta name="base-url" content="http://www.wallashops.co.il"/>-->
-    <meta name="base-url" content="http://www.wallashops.co.il" />
+    <meta name="base-url" content="http://dev.wallashops.co.il" />
     <meta name="ws-url" content="http://www.wallashops.co.il">
     <meta name="auto-close-at-level" content="1">
-    <meta name="version" content="1.1.35"/>
+    <meta name="version" content="1.1.36"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/rtl/css/bootstrap.rtl.css" />
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="phonegap.js"></script>
 
 </head>
-    <body class="rtl swipe-animations-enabled" ng-controller="AppCtrl">
+    <body class="rtl swipe-animations-enabled" ng-controller="AppCtrl" s-online>
         <!--<button class="set">SET IMAGE!!!</button>
         <img class="host"/>-->
         <div class="content-container">
