--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="ws-url" content="http://www.wallashops.co.il">
     <meta name="auto-close-at-level" content="1">
     <meta name="version" content="1.1.39"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/rtl/css/bootstrap.rtl.css" />
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="app/css/app.css" />
