--- a/index.html
+++ b/index.html
@@ -7,15 +7,26 @@
     <meta name="base-url" content="http://dev.wallashops.co.il" />
     <meta name="ws-url" content="http://www.wallashops.co.il">
     <meta name="auto-close-at-level" content="1">
-    <meta name="version" content="1.1.39"/>
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
+    <meta name="version" content="1.1.41"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/rtl/css/bootstrap.rtl.css" />
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="app/css/app.css" />
     <link rel="stylesheet" type="text/css" href="app/css/animations.css" />
 
     <script type="text/javascript" src="phonegap.js"></script>
-
+    <script type="text/javascript">
+        var viewPortWidth = 1024;
+        function setViewport() {
+            if ((navigator.userAgent.toLowerCase().indexOf("android") != -1)) {
+                var wW0 = window.screen.width;
+                var scale = wW0 / viewPortWidth;
+                var vPort = "width=" + viewPortWidth + ", maximum-scale=" + scale + ", minimum-scale=" + scale + ", initial-scale=" + scale + ", user-scalable=yes";
+                document.getElementById("viewport").setAttribute("content", vPort);
+            }
+        }
+        setViewport();
+    </script>
 </head>
     <body class="rtl swipe-animations-enabled" ng-controller="AppCtrl" s-online>
         <!--<button class="set">SET IMAGE!!!</button>
@@ -33,6 +44,7 @@
 
 
 
+        <script src="lib/fastclick/fastclick.js"></script>
         <script src="lib/analytics/ga_local.js"></script>
         <script src="lib/underscore/underscore.js"></script>
         <script src="lib/jquery/jquery-2.0.3.min.js"></script>
@@ -88,6 +100,7 @@
         <script src="app/js/services/product-service.js"></script>
         <script src="app/js/services/daily-cache-service.js"></script>
         <script src="app/js/services/walla-shops-api.js"></script>
+        <script src="app/js/services/external-browser.js"></script>
         <script src="app/js/services/product-details-presenter.js"></script>
 
 
