--- a/app/js/directives/product-pane/product-pane.html
+++ b/app/js/directives/product-pane/product-pane.html
@@ -1,6 +1,6 @@
 ﻿<div class="product-border">
-    <div class="check-box" ></div>
-    <div class="check-box-text" ng-click="check($event)" ng-class="{'checked': checked }" >
+    <div class="check-box" ng-class="{'checked': checked }"></div>
+    <div class="check-box-text" ng-click="check($event)">
         {{ !checked ?'לחץ להשוואה':'בטל השוואה' }}
     </div>
     <div class="product-info">
