--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -2,7 +2,7 @@
     
     <div class="header-right-side">
         <div class="logo">
-            <a href="#">
+            <a href="#" ng-click="home()">
                 <img src="app/img/logo.png">
             </a>
             
