--- a/app/js/directives/categories-menu/categories-menu-trigger.html
+++ b/app/js/directives/categories-menu/categories-menu-trigger.html
@@ -7,7 +7,7 @@
     
     <div class="menu-button ">
         <button class="category" bs-popover="'categories-menu.html'" data-trigger="manual" data-placement="bottom">
-            <b>לפי קטגוריה</b>
+            <span>לפי קטגוריה</span>
             <i class="fa fa-filter" ng-show="isFiltered"></i>
             <i class="fa fa-caret-down" ng-show="!isFiltered"></i>
         </button>
