--- a/app/js/directives/product-pane/product-pane.html
+++ b/app/js/directives/product-pane/product-pane.html
@@ -4,7 +4,7 @@
         {{ !checked ?'לחץ להשוואה':'בטל השוואה' }}
     </div>
     <div class="product-info">
-        <img class="productImg" ng-class="{'compared': isCompared}" ng-src="{{ product.imageUrl }}"/>
+        <img class="productImg" ng-src="{{ product.imageUrl }}"/>
 
         <div class="icons">
             <div class="image-icon" ng-repeat="icon in product.icons">
@@ -12,47 +12,41 @@
                     <div class="icon-text">{{ product.discountAmount }}<span>%</span>  הנחה </div>
                 </div>
 
-                <img ng-src="{{icon.imageUrl}}" />
+                <img ng-hide="loading" ng-src="{{icon.imageUrl}}" />
             </div>
         </div>
 
-        <p class="title" ng-class="{'compared': isCompared}"><b>{{ product.title }}</b></p>
+        <div class="title">{{ product.title }}</div>
 
-        <p class="subtitle" ng-class="{'compared': isCompared}">{{ product.subTitle }}</p>
+        <div class="subtitle">{{ product.subTitle }}</div>
 
-
-
-        <div class="rating" ng-show="setRatingLine(product)==='rating'" ng-class="{'compared': isCompared}">
-            
-            <span class="stars" ng-class="{'compared': isCompared}">
-                <i class="fa" ng-repeat="star in stars" ng-class="{'fa-star': $index<product.rating, 'fa-star-o':$index>=product.rating, 'fa-star-half-o' : $index==asInt(product.rating) && isDecimal(product.rating) }"></i>
-            </span>
-            <span class="raters-number" ng-show="!isCompared">({{product.ratersNumber}})</span>
+        <div class="rating" ng-if="setRatingLine(product)==='rating' && round(product.rating) > 0">
+            <img ng-src="app/img/star{{round(product.rating)}}.png" />
+            <span class="raters-number">({{product.ratersNumber}})</span>
         </div>
 
-        <p ng-show="!isCompared && setRatingLine(product)==='payments'">מס' תשלומים: {{ product.paymentsNum}} <span class="payments" ng-show="product.paymentsNum < 36">(עד 36 תשלומים כולל ריבית)</span></p>
-        <p ng-show="!isCompared && setRatingLine(product)==='soldCount'">נרכשו: {{ product.buyersCount}}</p>
+        <div ng-show="setRatingLine(product)==='payments'">מס' תשלומים: {{ product.paymentsNum}} <span class="payments" ng-show="product.paymentsNum < 36">(עד 36 תשלומים כולל ריבית)</span></div>
+        <div ng-show="setRatingLine(product)==='soldCount'">נרכשו: {{ product.buyersCount}}</div>
 
-        <div class="price" ng-class="{'compared': isCompared}" ng-show="product.saleType !== 'Personal'">
+        <div class="price" ng-show="product.saleType !== 'Personal'">
             <span>רק </span>
-            <b>{{product.price|number:0}} ש"ח</b>
-
+            <b>{{product.price|number:0}} ₪</b>
         </div>
-        <div class="price" ng-class="{'compared': isCompared}" ng-show="product.saleType === 'Personal' && product.showAvgPrice">
-            <b>{{product.averagePrice|number:0}} ש"ח</b>
-            <div class="diagonal"></div>
+        <div class="price" ng-show="product.saleType === 'Personal' && product.showAvgPrice">
+            <b class="average-price">{{product.averagePrice|number:0}} ₪</b>
+            
         </div>
 
         <span class="details-text" ng-show="setDetailsLine(product) == 'discount'">
             <!-- recent update to specs without diagonal on discount-->
             <div class="diagonal" ng-hide="true" n-g-show="setDetailsLine(product) == 'discount'"></div>
-            במקום {{product.originalPrice|number:0}} ש"ח
+            במקום {{product.originalPrice|number:0}} ₪
         </span>
         <span class="details-text" ng-show="setDetailsLine(product) == 'details'">לפרטים</span>
         <span class="details-text" ng-show="setDetailsLine(product) == 'shipping'">כולל משלוח</span>
         <span class="details-text" ng-show="setDetailsLine(product) == 'personalPrice'">מחיר אישי</span>
         <span class="details-text" ng-show="setDetailsLine(product) == 'getPrice'">קבל מחיר</span>
-        <p class="details" ng-show="!isCompared"></p>
+        <div class="details"></div>
 
     </div>
 
