--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Walla! שופס</title>
     <!--<meta name="base-url" content="http://www.wallashops.co.il"/>-->
-    <meta name="base-url" content="http://www.wallashops.co.il" />
+    <meta name="base-url" content="http://dev.wallashops.co.il" />
     <meta name="ws-url" content="http://www.wallashops.co.il">
     <meta name="auto-close-at-level" content="2">
-    <meta name="version" content="1.1.49" />
+    <meta name="version" content="1.1.50" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0,target-densitydpi=device-dpi">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/rtl/css/bootstrap.rtl.css" />
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
 <body class="rtl swipe-animations-enabled" ng-controller="AppCtrl">
     <!--<button class="set">SET IMAGE!!!</button>
     <img class="host"/>-->
-    <div class="content-container">
+    <div class="content-container" >
         <div class="loading" ng-hide="true">אנו אוספים נתונים עבורך, אנא המתן/י</div>
 
         <app-header></app-header>
@@ -37,10 +37,10 @@
     <script src="lib/fastclick/fastclick.js"></script>
     <script src="lib/analytics/ga_local.js"></script>
     <script src="lib/underscore/underscore.js"></script>
-    <script src="lib/jquery/jquery-2.0.3.min.js"></script>
+    <!--<script src="lib/jquery/jquery-2.0.3.min.js"></script>-->
+    <script src="lib/jquery/jquery.2.1.0.js"></script>
     <script src="lib/moment/moment.min.js"></script>
-    <script src="lib/tweenmax/tweenmax.js"></script>
-
+    
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
     <script src="lib/angular/angular-touch.min.js"></script>
