--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -16,7 +16,7 @@
     </div>
     <div class="search">
         <div class="search-inner">
-            <form ng-submit="searchText()">
+            <form ng-submit="search()">
                 <div class="search-input">
                     <input type="text" placeholder="מה תרצו לשופס?" ng-model="searchTerm" />
                 </div>
