--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <title>Walla! שופס</title>
     <!--<meta name="base-url" content="http://www.wallashops.co.il"/>-->
-    <meta name="base-url" content="http://dev.wallashops.co.il" />
+    <meta name="base-url" content="http://www.wallashops.co.il" />
+    <meta name="b-ase-url" content="http://localhost:56325" />
     <meta name="ws-url" content="http://www.wallashops.co.il">
     <meta name="auto-close-at-level" content="2">
-    <meta name="version" content="1.1.51" />
+    <meta name="version" content="1.1.52" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0,target-densitydpi=device-dpi">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/rtl/css/bootstrap.rtl.css" />
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -128,7 +129,7 @@
             angular.element(document).ready(function () {
                 setTimeout(function() {
                     angular.bootstrap(document, ['WallaShops']);
-
+                    FastClick.attach(document.body);
                     if (navigator.splashscreen) {
                         navigator.splashscreen.hide();
                     }
