--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Walla! שופס</title>
     <!--<meta name="base-url" content="http://www.wallashops.co.il"/>-->
     <meta name="b-ase-url" content="http://www.wallashops.co.il" />
-    <meta name="base-url" content="http://localhost:56325" />
+    <meta name="base-url" content="http://wsp.azurewebsites.net" />
     <meta name="ws-url" content="http://www.wallashops.co.il">
     <meta name="auto-close-at-level" content="2">
     <meta name="version" content="1.1.54" />
